@@ -17,6 +17,9 @@
 #include "ai.hpp"
 #include "ai2.hpp"
 #include "ai_dfool.hpp"
+#ifdef HAVE_PYTHON
+#include "ai_python.hpp"
+#endif
 //#include "advanced_ai.hpp"
 #include "dialogs.hpp"
 #include "game_config.hpp"
@@ -200,6 +203,12 @@ ai_interface* create_ai(const std::string& name, ai_interface::info& info)
 	//	return new advanced_ai(info);
 	else if(name == "ai2")
 		return new ai2(info);
+	else if(name == "python_ai")
+#ifdef HAVE_PYTHON
+		return new python_ai(info);
+#else
+		return new ai2(info);
+#endif
 	else if(name != "")
 		LOG_STREAM(err, ai) << "AI not found: '" << name << "'\n";
 
