@@ -228,6 +228,8 @@ SVN trunk (1.1.x):
  * --with-preferences-dir configure option for coexistence of multiple versions
  * now defaults to --with-fribidi if fribidi found during configure
  * various bug fixes and code cleanups
+ * experimental Python API for AI. See http://www.wesnoth.org/wiki/ReferencePythonAPI
+   for more information.
 
 Version 1.0rc1:
  * language and i18n:
